--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.18.0",
     "i18next": "^23.16.8",
     "i18next-browser-languagedetector": "^7.1.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.474.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
