--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_EMAILJS_SERVICE_ID=palawan_express
 VITE_EMAILJS_TEMPLATE_ID=template_jngif2f
 VITE_EMAILJS_PUBLIC_KEY=HWVRct2n8j5j9jUQr
 VITE_EMAILJS_CUSTOMER_TEMPLATE_ID=template_5v2i24f
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyAf9vMB7k_ZHAt_g7wDICSl4kZsSpyIrd0
