--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.474.0",
+    "openai": "^4.82.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
