--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,14 @@
     "TWILIO_PHONE_NUMBER": "@twilio_phone_number",
     "SUPABASE_URL": "@supabase_url",
     "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+  },
+  "build": {
+    "env": {
+      "TWILIO_ACCOUNT_SID": "@twilio_account_sid",
+      "TWILIO_AUTH_TOKEN": "@twilio_auth_token",
+      "TWILIO_PHONE_NUMBER": "@twilio_phone_number",
+      "SUPABASE_URL": "@supabase_url",
+      "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+    }
   }
 }
