--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ VITE_SUPABASE_URL="https://achpbaomhjddqycgzomw.supabase.co"
 VITE_TWILIO_ACCOUNT_SID="ACc2dfb43c591ff97490223ddb3adcaa65"
 VITE_TWILIO_AUTH_TOKEN="2ccee0d25d7c81faeb47088c4556fe63"
 VITE_TWILIO_PHONE_NUMBER="+16073262455"
+VITE_RESEND_API_KEY="re_buQ92eF5_2kA398nsKmak4XFC3w6Tmqd4"
+VITE_GOOGLE_MAPS_API_KEY="AIzaSyAf9vMB7k_ZHAt_g7wDICSl4kZsSpyIrd0"
+VITE_PAYMONGO_PUBLIC_KEY="pk_test_k3HUMqjvcp1ibE2YgJ5gpqP3"
+VITE_PAYMONGO_SECRET_KEY="sk_test_XdMiRbWiNSHvvW4LPHJgN5qy"
