--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "resend": "^4.1.2",
     "swiper": "^10.3.1",
     "tailwindcss": "^3.3.3",
-    "twilio": "^5.4.3",
-    "uuid": "^11.0.5"
+    "twilio": "^4.0.0",
+    "uuid": "^11.0.5",
+    "@vercel/node": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vercel/node": "^5.1.2",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
