--- a/package.json
+++ b/package.json
@@ -48,5 +48,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "exports": {
+    "./api/*": {
+      "require": "./api/*.js",
+      "import": "./api/*.js"
+    }
   }
 }
