--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,20 @@
   "functions": {
     "api/*.ts": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 10,
+      "runtime": "@vercel/node@2.0.0"
     }
   },
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
+    }
+  ],
+  "builds": [
+    {
+      "src": "api/*.ts",
+      "use": "@vercel/node"
     }
   ]
 }
