--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,19 @@
 {
   "version": 2,
-  "functions": {
-    "api/*.ts": {
-      "memory": 1024,
-      "maxDuration": 10,
-      "runtime": "@vercel/node@2.0.0"
+  "builds": [
+    {
+      "src": "api/*.ts",
+      "use": "@vercel/node",
+      "config": {
+        "memory": 1024,
+        "maxDuration": 10
+      }
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
-    }
-  ],
-  "builds": [
-    {
-      "src": "api/*.ts",
-      "use": "@vercel/node"
     }
   ]
 }
