--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "lib": ["es2017"],
+    "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noImplicitAny": true,
-    "outDir": "../dist/api"
+    "outDir": "../dist/api",
+    "rootDir": ".",
+    "types": ["node"]
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
