--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": ".vercel/output",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
   "builds": [
     {
       "src": "api/**/*.ts",
