--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,18 +2,26 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "outDir": "../.vercel/output/functions",
-    "rootDir": "..",
+    "lib": ["es2017", "es2018", "es2019", "es2020"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "outDir": "../dist/api",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["../src/*"]
+    }
   },
-  "include": [
-    "./**/*",
-    "../src/utils/debug-logger.ts"
-  ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["**/*.ts"]
 } 
