--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,26 +2,22 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "lib": ["es2017", "es2018", "es2019", "es2020"],
+    "outDir": "../.vercel/output/functions",
+    "rootDir": "..",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "incremental": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "sourceMap": true,
-    "outDir": "../dist/api",
-    "baseUrl": ".",
+    "baseUrl": "..",
     "paths": {
-      "@/*": ["../src/*"]
+      "@/*": ["src/*"]
     }
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts"]
+  "include": [
+    "./**/*",
+    "../src/utils/**/*"
+  ],
+  "exclude": ["node_modules"]
 } 
