fix: update API route configuration and CORS handling
- Added specific route for send-driver-sms in vercel.json
- Updated client-side request with full URL
- Enhanced CORS configuration in API handler
- Added detailed request logging

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/send-driver-sms",
+      "destination": "/api/send-driver-sms.ts"
+    },
+    {
       "source": "/api/:path*",
       "destination": "/api/:path*"
     },
