--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.0.18",
     "@modelcontextprotocol/server-postgres": "^0.6.2",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.48.1",
     "@vercel/node": "^2.0.0",
     "autoprefixer": "^10.4.16",
-    "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "esbuild": "^0.25.0",
     "framer-motion": "^10.18.0",
@@ -56,11 +60,15 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "concurrently": "^9.1.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "vercel": "^41.1.4",
     "vite": "^4.4.5"
   },
