Fix WhatsApp test API 405 error by improving CORS handling, adding better error messages, and updating Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,10 @@
       "destination": "/api/send-driver-sms.ts"
     },
     {
+      "source": "/api/test-whatsapp",
+      "destination": "/api/test-whatsapp.ts"
+    },
+    {
       "source": "/api/:path*",
       "destination": "/api/:path*"
     },
