--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "openai": "^4.82.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
