--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,44 @@
+# Environment variables
 .env
 .env.local
+.env.development
+.env.test
+.env.production
+
+# Dependencies
 node_modules/
-.DS_Store
+/.pnp
+.pnp.js
+
+# Build outputs
 dist/
+build/
 .vite/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Testing
+/coverage
+
+# Misc
+.cache/
+.vercel
+.netlify
